--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,8 @@ Django==1.7.1
 django-colorfield==0.1.3
 django-randomslugfield==0.3.0
 django-tastypie==0.12.0
+django-waffle==0.10.1
 jsonfield==1.0.0
 jsonschema==2.4.0
-python-bugzilla
-requests
+python-bugzilla==1.1.0
+requests==2.4.3
